<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MIF</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_word">Add Words!</string>
    <string name="title_activity_game_settings">Game Settings</string>
    <string name="teams">teams</string>
    <string name="seconds">seconds</string>
    <string name="words">words</string>
    <string name="selectedCategories">selectedCategories</string>
    <string name="title_activity_game">Make it Fast!</string>
    <string name="ok">OK</string>
    <string name="categoryAlertMessage">Please select at least %d category.</string>
    <string name="team">Team </string>
    <string name="timeIsUp">Time is up</string>
    <string name="activityWillContinue">activity will continue</string>
    <string name="newCategory">New Category</string>
    <string name="categoryName">The Name of the Category:</string>
    <string name="cancel">Cancel</string>
    <string name="cancelMessage">Are you sure you want to end the game?</string>
    
    <string name="numberTeams">Number of teams:</string>
    <string name="numberTime">Time per round:</string>
    <string name="numberWords">Number of words per round:</string>
    <string name="startGame">Start Game</string>
    
    <string name="enterWord">Enter new word</string>
    <string name="deleteWords">Delete Words</string>
    <string name="addWord">Add Word</string>
    
    <string name="next">Next</string>
    <string name="end">End Game</string>
    
    <string name="rules">Welcome to MIF(Make It Fast),\n

The game work as follows: The group of players is divided in teams of 2 or more players. When the game is started one player of one team has the playdevice in his/her hand. He/she is shown words which he/she has to explain to his/her teammates without naming the word. This has to be done in an amount of time. When time expands he/she can click on the words which his/her team guessed and click next. Then the scoreboard pops up and the first player has to hand the playdevice to the next player. When clicked next again the game starts again with different words.

the purpose of this game is to score more points with your teams than the other teams. The game ends when clicked stop or all the words are shown.</string>
    <string name="play">Play</string>
    <string name="addWords">Add new Words</string>
    
    <string name="winner">The winning team is</string>
    
    <color name="red">#FF0000</color>
    <color name="white">#FFFFFF</color>

</resources>
