<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
	<RelativeLayout    
		android:layout_width="0dp"
		android:layout_weight="9"
		android:layout_height="match_parent">
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
	
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal">
			    
			    <EditText android:id="@+id/edit_message"
			        android:layout_weight="2"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:hint="@string/enterWord" />
			    <Spinner
			        android:id="@+id/spinner1"
			        android:layout_height="wrap_content"
			        android:layout_width="0dp"
			        android:layout_weight="1" />
			    
			</LinearLayout> 
			<Button
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/addWord" 
		        android:onClick="addWord"/> 
		    <ListView
		        android:id="@+id/list_view"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_marginBottom="50dp"
		        android:layout_marginTop="5dp"
		        android:background="@android:color/transparent"
		        android:cacheColorHint="@android:color/transparent"
		        android:divider="#CCCCCC"
		        android:dividerHeight="1dp"
		        android:paddingLeft="2dp" >
		    </ListView>
		    
		</LinearLayout>
	
	    <Button
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/deleteWords" 
	        android:onClick="delete"
	        android:layout_alignParentBottom="true"/> 
	</RelativeLayout>
	<Button
	    android:layout_width="wrap_content" 
	    android:layout_height="match_parent"
	    android:background="@color/white"
	    android:id="@+id/play"
	    android:text="@string/next"
	    android:onClick="play"/>"
</LinearLayout>