<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
	<RelativeLayout    
		android:layout_width="0dp"
		android:layout_weight="9"
		android:layout_height="match_parent">
	
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    <LinearLayout
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:orientation="horizontal">
		
		        <TextView
		            android:layout_height="wrap_content"
		            android:layout_width="wrap_content"
		            android:text="@string/numberTeams"/>
		        <TextView
		            android:id="@+id/nTeams"
		            android:layout_height="wrap_content"
		            android:layout_width="wrap_content" />
		
		    </LinearLayout>
		    <SeekBar
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/teams"
		        android:max="3"
		        android:layout_gravity="center_horizontal" />
		
		    <LinearLayout
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:orientation="horizontal">
		
		        <TextView
		            android:layout_height="wrap_content"
		            android:layout_width="wrap_content"
		            android:text="@string/numberTime"/>
		        <TextView
		            android:id="@+id/nSec"
		            android:layout_height="wrap_content"
		            android:layout_width="wrap_content" />
		
		    </LinearLayout>
		    <SeekBar
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/seconds"
		        android:max="50"
		        android:layout_gravity="center_horizontal" />
		    <LinearLayout
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:orientation="horizontal">
		
		        <TextView
		            android:layout_height="wrap_content"
		            android:layout_width="wrap_content"
		            android:text="@string/numberWords"/>
		        <TextView
		            android:id="@+id/nWords"
		            android:layout_height="wrap_content"
		            android:layout_width="wrap_content" />
		
		    </LinearLayout>
		    <SeekBar
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/words"
		        android:max="8"
		        android:layout_gravity="center_horizontal" />
		
		
		    <ListView
		        android:layout_width="fill_parent"
		        android:layout_height="0dp"
		        android:layout_weight="1"
			    android:id="@+id/list"
			    android:choiceMode="singleChoice"		    
			    android:paddingBottom="40dp"
			    android:layout_gravity="left|center_vertical">
		
		
		    </ListView>
	    </LinearLayout>
	</RelativeLayout>
	<Button
	    android:layout_width="wrap_content" 
	    android:layout_height="match_parent"
	    android:background="@color/white"
	    android:id="@+id/play"
	    android:text="@string/play"
	    android:onClick="newGame"/>
</LinearLayout>
	


